--- a/.gitignore
+++ b/.gitignore
@@ -101,14 +101,14 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
-# Environments
-.venv
-*/.env
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+# # Environments
+# .venv
+# */.env
+# env/
+# venv/
+# ENV/
+# env.bak/
+# venv.bak/
 
 # Spyder project settings
 .spyderproject
@@ -128,4 +128,3 @@ dmypy.json
 # Pyre type checker
 .pyre/
 .idea/*
-.env
