--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,8 +9,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
+    - uses: actions/setup-python@v3
       with:
         python-version: '3.10'
         cache: 'pip'
     - run: pip install -r requirements.txt
+    - run: python3 app.py
